--- a/navigation bar/nb.html
+++ b/navigation bar/nb.html
@@ -5,39 +5,39 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title> Navigation Project</title>
-<link rel="stylesheet" href="nb.css">
-<link href ="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.3.0/css/all.min.css" rel="stylesheet">
-<link rel="stylesheet" href="styles.css">
+    <title>Navigayion Project</title>
+    <link rel="stylesheet" href="nb.css">
 </head>
-
 <body>
-    <nav>
-        <div class="nav-main">
-            <div class="nav-header">
-                <!--
-<img src="https://www.google.com/url?sa=i&url=https%3A%2F%2Fwww.likhaari.com%2Fs%2Fsamra&psig=AOvVaw3_uLrqCczKgov3xxC7s34H&ust=1677952891824000&source=images&cd=vfe&ved=0CBAQjRxqFwoTCICQuuKrwP0CFQAAAAAdAAAAABAF" alt="logo">
-                -->
-                
-
-                <i class="fa fa-bars" aria-hidden="true"></i>
-            </div>
-            <ul class="menu">
-                <li>
-                    <a href="#">Home</a>
-                </li>
-                <li>
-                    <a href="#">About</a>
-                </li>
-                <li>
-                    <a href="#">Contact</a>
-
-                </li>
+    <nav class="nav">
+        <div class="container">
+            <h1 class="logo"><a href="#">CodeBySamra</a></h1>
+            <ul>
+                <li><a href="#" class="current">Home</a></li>
+                <li><a href="#">About</a></li>
+                <li><a href="#">Service</a></li>
+                <li><a href="#">Contect</a></li>
             </ul>
         </div>
+    </nav>   
+  
+
+<div class="hero">
+  <div class="container">
+    <h1>Welcome To Code By Samra</h1>
+    <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Maiores, consequuntur?</p>
+  </div>
+</div>
+
+<section class="container content">
+  <h2>Content One</h2>
+  <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Ratione dolorem voluptates eveniet tempora ut cupiditate magnam, sapiente, hic quo in ipsum iste soluta eaque perferendis nihil recusandae dolore officia aperiam corporis similique. Facilis quos tempore labore totam! Consectetur molestiae iusto ducimus error reiciendis aspernatur dolor, modi dolorem sit architecto, voluptate magni sunt unde est quas? Voluptates a dolorum voluptatum quo perferendis aut sit. Aspernatur libero laboriosam ab eligendi omnis delectus earum labore, placeat officiis sint illum rem voluptas ipsum repellendus iste eius recusandae quae excepturi facere, iure rerum sequi? Illum velit delectus dicta et iste dolorum obcaecati minus odio eligendi!</p>
+
+  <h3>Content Two</h3>
+  <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Pariatur provident nostrum possimus inventore nisi laboriosam consequatur modi nulla eos, commodi, omnis distinctio! Maxime distinctio impedit provident, voluptates illo odio nostrum minima beatae similique a sint sapiente voluptatum atque optio illum est! Tenetur tempora doloremque quae iste aperiam hic cumque repellat?</p>
+</section>      
     </nav>
 </body>
 <script src="nb.js"></script>
 </html>
-
 
